unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue__c</fullName>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>