unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/BDM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>BDM_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BDM Assigned</label>
    <type>Checkbox</type>
</CustomField>