unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Biomed_Collection_Op_Center__c.field-meta.xml
<CustomField>
    <fullName>Biomed_Collection_Op_Center__c</fullName>
    <label>Biomed Collection Op (Center)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>