unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Biomed_Market_Manager_Territory__c.field-meta.xml
<CustomField>
    <fullName>Biomed_Market_Manager_Territory__c</fullName>
    <label>Biomed Market Manager Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>