unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Chapter__c.field-meta.xml
<CustomField>
    <fullName>Chapter__c</fullName>
    <label>Chapter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>