unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Collections_Territory__c.field-meta.xml
<CustomField>
    <fullName>Collections_Territory__c</fullName>
    <label>Collections Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>