unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>