unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Contacted_Status_Agr_Days__c.field-meta.xml
<CustomField>
    <fullName>Contacted_Status_Agr_Days__c</fullName>
    <label>Contacted Status Agr Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>