unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Contacted_to_Unqualified_Status__c.field-meta.xml
<CustomField>
    <fullName>Contacted_to_Unqualified_Status__c</fullName>
    <label>Contacted to Unqualified Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>