unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Donor_Services_Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Donor_Services_Region_Name__c</fullName>
    <label>Donor Services Region Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>