unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Initial_Qualified_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Qualified_Lead_Status__c</fullName>
    <label>Initial Qualified Lead Status</label>
    <type>Date</type>
</CustomField>