unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Initial_Unqualified_Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Initial_Unqualified_Lead_Status__c</fullName>
    <label>Initial Unqualified Lead Status</label>
    <type>Date</type>
</CustomField>