unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Interest_Survey_Complete__c.field-meta.xml
<CustomField>
    <fullName>Interest_Survey_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Survey Complete</label>
    <type>Checkbox</type>
</CustomField>