unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_Priority__c</fullName>
    <label>Lead Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>