unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Lead_Score_New_2__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_New_2__c</fullName>
    <label>Lead Score New 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>