unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Lead_Score_New_c__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_New_c__c</fullName>
    <label>Lead_Score_New__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>