unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Lead_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Lead_Scoring__c</fullName>
    <label>Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>