unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>