unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Lead_Status_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Contacted__c</fullName>
    <label>Lead Status Contacted</label>
    <type>Date</type>
</CustomField>