unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Lead_Status_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Qualified__c</fullName>
    <label>Lead Status Qualified</label>
    <type>Date</type>
</CustomField>