unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/New_to_Converted_Status__c.field-meta.xml
<CustomField>
    <fullName>New_to_Converted_Status__c</fullName>
    <label>New to Converted Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>