unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Other_Redcross_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Other_Redcross_Relationships__c</fullName>
    <label>Other Redcross Relationships</label>
    <length>255</length>
    <type>Text</type>
</CustomField>