unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Personal_Story__c.field-meta.xml
<CustomField>
    <fullName>Personal_Story__c</fullName>
    <label>Personal Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>