unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>