unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/PhotoUrl__c.field-meta.xml
<CustomField>
    <fullName>PhotoUrl__c</fullName>
    <label>PhotoUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>