unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Qualified_Status_Agr_Days__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Status_Agr_Days__c</fullName>
    <label>Qualified Status Agr Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>