unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>