unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <label>Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>