unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Student_Type__c.field-meta.xml
<CustomField>
    <fullName>Student_Type__c</fullName>
    <label>Student Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>