unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <label>Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>