unpackaged/main/default/objects/PE_Lead_All_Colums__e/fields/Total_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_Score__c</fullName>
    <label>Total Lead Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>